crates/fs-id/tests/compile_fail/not_tuple_struct.rs
use fs_id::{Nanoid, fs_id};

#[fs_id]
pub struct Named {
    pub inner: Nanoid,
}

fn main() {}
