crates/fs-id/tests/compile_fail/not_tuple_struct.stderr
error: `#[fs_id]` requires a tuple struct with exactly one field, e.g. `pub struct Foo(pub Bar);`
 --> tests/compile_fail/not_tuple_struct.rs:4:18
  |
4 |   pub struct Named {
  |  __________________^
5 | |     pub inner: Nanoid,
6 | | }
  | |_^

warning: unused import: `Nanoid`
 --> tests/compile_fail/not_tuple_struct.rs:1:13
  |
1 | use fs_id::{Nanoid, fs_id};
  |             ^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
